--- a/index.html
+++ b/index.html
@@ -3,9 +3,188 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Learning how to learn</title>
+    <link rel="stylesheet" href="./styles/blocks/pages/index.css">
 </head>
 <body>
-    
+  <div class="page">
+    <header class="header">
+      <img class="logo logo__place_header" src="./images/logo.png" alt="practicum logo">
+      <h1 class="header__title">Learning how to learn</h1>
+      <p class="header__subtitle">The most effective, cutting-edge learning techniques that you can apply to your daily life.
+        <a href="#" class="header__link">Learn more &#8594;</a>
+      </p>
+      <img class="header__main-illustration" src="./images/on_the_edge.png" alt="man standing on the edge of a rock">
+      <div class="header__rotation">
+        <div class="header__square-pic">
+        </div>
+      </div>
+    </header>
+  <main class="content">
+    <section class="description">
+      <div class="two-columns">
+        <h4 class="two-columns__brief">The main problem with education</h4>
+      <div class="two-columns__main-text">
+        <p class="two-columns__paragraph">
+          Whether it's at school or university, the one thing no one ever teaches you is how to teach yourself. All you actually do is memorize information in order to regurgitate when you take the test. You get drilled on how to solve specific exercises so that while you know exactly what you need to do when exam time comes around, do you truly understand the subject material? All you've really learned is how to pass that one test. Once that test is over, the information in your head has outlived its usefulness.
+        </p>
+        <p class="two-columns__paragraph">
+          <span class="two-columns__span-accent">Conclusion:</span>
+          Knowing how to study is absolutely essential, but for some reason, this point is too often overlooked. So, what can we do to remedy this?
+        </p>
+        <p class="two-columns__paragraph">
+          There are certain techniques and exercises that can be applied to the learning process to help make it more efficient and engaging. This is exactly what we do at Practicum.
+        </p>
+      </div>
+      </div>
+    </section>
+    <section class="digits">
+      <h2 class="section-title">Facts and Figures</h2>
+      <p class="section-subtitle">On learning and the brain</p>
+      <ul class="table">
+        <li class="table__cell">
+          <h4 class="table__heading">86 billion</h4>
+          <p class="table__text">The number of neurons in the human brain</p>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">2.1 billion</h4>
+          <p class="table__text">The number of adults with low reading proficiency
+          </p>
+          <cite class="table__text">World Bank, 2017</cite>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">1,000 terabytes</h4>
+          <p class="table__text">Human information storage capacity
+          </p>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">500 trillion</h4>
+          <p class="table__text">The number of nerve synapses responsible for learning in an adult human
+          </p>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">420 million</h4>
+            <p class="table__text">The number of adults under 25 with insufficient education for finding employment
+            </p>
+            <cite class="table__text">World Bank, 2017</cite>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">17 - 20 years old</h4>
+          <p class="table__text">Peak learning age
+          </p>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">1885</h4>
+          <p class="table__text">Development of the forgetting curve
+          </p>
+        </li>
+        <li class="table__cell">
+          <h4 class="table__heading">1897</h4>
+          <p class="table__text">Publication of Ivan Pavlov's research on classical conditioning
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">The Feynman Technique</h2>
+      <h3 class="feynman__subtitle">Learn without forgetting.</h3>
+      <a href="#" class="feynman__link">More &#8594;</a>
+    </section>
+    <section class="kaufman">
+      <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
+      <h3 class="section-subtitle section-subtitle_theme_dark">by Josh Kaufman</h3>
+        <ol class="table table__theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">1</h4>
+            <p class="table__text">Choose a lovable project.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">2</h4>
+            <p class="table__text">Focus your energy on one skill at a time.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">3</h4>
+            <p class="table__text">Define your target performance level.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">4</h4>
+            <p class="table__text">Deconstruct the skill into sub-skills.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">5</h4>
+            <p class="table__text">Obtain critical tools.
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">6</h4>
+            <p class="table__text">Eliminate barriers to practice.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">7</h4>
+            <p class="table__text">Make dedicated time for practice.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">8</h4>
+            <p class="table__text">Create fast feedback loops.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">9</h4>
+            <p class="table__text">Practice by the clock in short bursts.
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading">10</h4>
+            <p class="table__text">Emphasize quantity and speed.
+            </p>
+          </li>
+        </ol>
+        <img src="./images/triangle.svg" alt="blue-triangle" class="kaufman__triangle">
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__column footer__column_content_copyright">
+          <img src="./images/logo_white.png" alt="practicum logo" class="logo logo__place_footer">
+          <p class="footer__author">&copy; 2020 James Ryan</p>
+        </div>
+        <div class="footer__column footer__column_content_info">
+          <h4 class="footer__column-heading">About Practicum by Yandex</h4>
+          <ul class="footer__column-links">
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">Home page</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">Concept</a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">Mentors</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column footer__column_content_social">
+            <h4 class="footer__column-heading">Social media</h4>
+            <ul class="footer__column-links">
+              <li class="footer__list-item">
+                <a href="https://www.facebook.com" class="footer__column-link">
+                  <img src="./images/facebook_white.svg" alt="facebook icon" class="footer__social-icon"
+                  >Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="https://www.instagram.com" class="footer__column-link">
+                  <img src="./images/instagram_white.svg" alt="instagram icon" class="footer__social-icon"
+                  >Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </footer>
+  </div>
 </body>
 </html>
