--- a/index.html
+++ b/index.html
@@ -38,6 +38,86 @@
       </div>
       </div>
     </section>
+    <section class="techniques">
+      <h2 class="section-title">Learning Techniques</h2>
+      <h3 class="section-subtitle">Five Strategies from Barbara Oakley</h3>
+      <ul class="cards">
+        <li class="cards__item">
+          <img src="./images/attention.png" class="cards__image" alt="person reading a book">
+          <h4 class="cards__title">Two Ways of Thinking</h4>
+          <p class="cards__description">
+            Deep understanding comes from being able to switch back and forth between focused and diffused thinking
+          </p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/recall.png" class="cards__image" alt="statue deep in thought">
+          <h4 class="cards__title">Recall</h4>
+          <p class="cards__description">
+            Improving your ability to remember key bits of information helps to connect different parts of the brain
+          </p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/interliving.png" class="cards__image" alt="people in an atrium">
+          <h4 class="cards__title">Interleaving</h4>
+          <p class="cards__description">
+            When you learn multiple skills at the same time they reinforce each other
+          </p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/question.png" class="cards__image" alt="a person in an art gallery">
+          <h4 class="cards__title">Questions</h4>
+          <p class="cards__description">
+            When listening to your teacher, think up a good question, something that you're really itching to know.
+          </p>
+        </li>
+        <li class="cards__item">
+          <img src="./images/competence.png" class="cards__image" alt="a hand holding a stack of books">
+          <h4 class="cards__title">
+            Illusion of Competence</h4>
+          <p class="cards__description">
+            Test yourself, write it down, tell other people, and repeat the process in different settings. Only then can you be truly certain you've understood something.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="video">
+      <h2 class="section-title">TED Talks</h2>
+      <p class="section-subtitle">For lovers of procrastination</p>
+      <div class="video__iframes">
+        <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+<iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316"
+src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+        <!-- <video class="video__iframe" width="515" height="316" controls>
+          <source src="https:www.youtube.com/watch?v=5MgBikgcWnY?start=0">
+        </video>
+        <video class="video__iframe" width="515" height="316" controls>
+          <source src="https:www.youtube.com/watch?v=arj7oStGLkU?start=0">
+        </video> -->
+      </div>
+    </section>
+    <section class="oakley">
+      <div class="two-columns">
+        <h4 class="two-columns__brief">Barbara Oakley's story</h4>
+      <div class="two-columns__main-text">
+        <p class="two-columns__paragraph">
+          Math didn't come naturally to Barbara in childhood. She thought of herself as more of a 
+humanities person, and not a brilliant one at that. With an eye to becoming a linguist, after 
+school she enlisted in the army, who sent her to learn Russian. After several years of service, 
+during which she rose to the rank of Captain, Barbara left the army and decided to study 
+engineering. In was during this time that she developed her learning methodology as she was 
+forced to reprogram her brain for a different kind of learning. It turns out that when something 
+doesn't come naturally to you, having to work hard to gain the knowledge that other people 
+may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.
+        </p>
+      </div>
+      </div>
+    </section>
+    <section class="feynman">
+      <h2 class="feynman__title">The Feynman Technique</h2>
+      <h3 class="feynman__subtitle">Learn without forgetting.</h3>
+      <a href="#" class="feynman__link">More &#8594;</a>
+    </section>
     <section class="digits">
       <h2 class="section-title">Facts and Figures</h2>
       <p class="section-subtitle">On learning and the brain</p>
@@ -85,10 +165,23 @@
         </li>
       </ul>
     </section>
-    <section class="feynman">
-      <h2 class="feynman__title">The Feynman Technique</h2>
-      <h3 class="feynman__subtitle">Learn without forgetting.</h3>
-      <a href="#" class="feynman__link">More &#8594;</a>
+    <section class="khan">
+      <div class="khan__container">
+        <h3 class="khan__author">Salman Khan</h3>
+        <h2 class="khan__title">The One World Schoolhouse</h2>
+        <blockquote class="khan__quote">
+          Sal Khan's passion and innovation is transforming learning for millions of 
+          students worldwide. The One World Schoolhouse is a must-read for all 
+          who are committed to improving education so students everywhere can 
+          gain the skills and knowledge to be successful in school, careers and life.
+        </blockquote>
+        <cite class="khan__quote-author">George Lucas</cite>
+        <p class="khan__quote-author-subline">Filmmaker</p>
+        <div class="khan__book-container">
+          <img src="./images/book.png" alt="a picture of a book" class="khan__book-pic">
+          <a href="#" class="khan__buy-link">Buy book &#8594;</a>
+        </div>
+      </div>
     </section>
     <section class="kaufman">
       <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
@@ -143,7 +236,19 @@
             </p>
           </li>
         </ol>
-        <img src="./images/triangle.svg" alt="blue-triangle" class="kaufman__triangle">
+        <div class="rotation">
+          <img src="./images/triangle.svg" alt="blue-triangle" class="kaufman__triangle">
+        </div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Useful resources</h2>
+        <h3 class="section-subtitle">Further materials on learning techniques and hacks</h3>
+        <div class="resources__logo-zone">
+            <img src="./images/logo/tedED.png" class="resources__logo" alt="TedEd logo">
+            <img src="./images/logo/Medium.png" class="resources__logo" alt="Medium logo">
+            <img src="./images/logo/dezeen.png" class="resources__logo" alt="de zeen logo">
+            <img src="./images/logo/goodreads.png" class="resources__logo" alt="good reads logo">
+        </div>
       </section>
     </main>
     <footer class="footer">
