third submission 11 fixes

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
       <h2 class="section-title">TED Talks</h2>
       <p class="section-subtitle">For lovers of procrastination</p>
       <div class="video__iframes">
-        <iframe class="video__iframe" id="ytplayerkaufman" width="515" height="316"
+        <iframe class="video__iframe" width="515" height="316"
 src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-<iframe class="video__iframe" id="ytplayerurban" width="515" height="316"
+<iframe class="video__iframe" width="515" height="316"
 src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
       </div>
     </section>
@@ -106,7 +106,7 @@ may get at first glance gives you a deeper, more comprehensive understanding of 
       </div>
     </section>
     <section class="feynman">
-      <h2 class="feynman__title">The&nbspFeynman Technique</h2>
+      <h2 class="feynman__title">The&nbsp;Feynman Technique</h2>
       <h3 class="feynman__subtitle">Learn without forgetting.</h3>
       <a href="#" class="feynman__link">More &#8594;</a>
     </section>
@@ -232,7 +232,7 @@ may get at first glance gives you a deeper, more comprehensive understanding of 
       </section>
       <section class="resources">
         <h2 class="section-title">Useful resources</h2>
-        <h3 class="section-subtitle">Further materials on learning techniques and hacks</h3>
+        <p class="section-subtitle">Further materials on learning techniques and hacks</p>
         <ul class="resources__logo-zone">
             <li><img src="./images/logo/tedED.png" class="resources__logo" alt="TedEd logo"></li>
             <li><img src="./images/logo/Medium.png" class="resources__logo" alt="Medium logo"></li>
